--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: 找不到网页呀！"
 permalink: 404.html
 ---
 
-<h1 class="page-title">404: Page not found</h1>
-<p>Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+<h1 class="page-title">404: </h1>
+<p>施主，你怎么进来这里的？<a href="{{ site.github.baseurl }}/">回头是岸！</a></p>
