--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "404: 找不到网页呀！"
+title: "404: 找不到网页哟！"
 permalink: 404.html
 ---
 
 <h1 class="page-title">404: </h1>
-<p>施主，你怎么进来这里的？<a href="{{ site.github.baseurl }}/">回头是岸！</a></p>
+<p>施主，你怎么进来这里的？<a href="{{ site.github.baseurl }}/">嘤嘤嘤，回头是岸！</a></p>
